--- a/src/_locales/ru/messages.json
+++ b/src/_locales/ru/messages.json
@@ -41,6 +41,9 @@
   "add_exception": {
     "message": "Добавить исключение"
   },
+  "add_on_health": {
+    "message": "Дополнение о состоянии системы"
+  },
   "add_website": {
     "message": "Добавить сайт"
   },
@@ -97,6 +100,9 @@
   "become_a_contributor": {
     "message": "Стать участником"
   },
+  "being_an_eu_company__ghostery_strictly_adheres_to_the_gdpr__the_general_data_protection_regulation___which_regulates_data_collection_to_ensure_user_s_privacy_": {
+    "message": "Будучи компанией из ЕС, Ghostery строго соблюдает GDPR (Общий регламент по защите данных), который регулирует сбор данных для обеспечения конфиденциальности пользователей."
+  },
   "block_all__recommended_": {
     "message": "Заблокировать все (рекомендуется)"
   },
@@ -122,6 +128,12 @@
   "blocks_additional_ads__trackers__and_pop_ups_specific_to_the_language_of_websites_you_visit__enable_only_the_languages_you_need_to_avoid_slowing_down_your_browser_": {
     "message": "Блокирует дополнительные объявления, трекеры и всплывающие окна, специфичные для языка посещаемых вами веб-сайтов. Включайте только те языки, которые вам нужны, чтобы избежать замедления работы браузера."
   },
+  "browser__vendor": {
+    "message": "браузер: поставщик"
+  },
+  "browser__vendor__version__language__operating_system_vendor": {
+    "message": "браузер: производитель, версия, язык, производитель операционной системы"
+  },
   "cancel": {
     "message": "Отмена"
   },
@@ -134,6 +146,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "Нажмите на значок «Расширения» справа от строки поиска и закрепите Ghostery на панели инструментов."
+  },
+  "close": {
+    "message": "Закрыть"
   },
   "collapse": {
     "message": "Свернуть"
@@ -184,6 +199,9 @@
     "message": "Взаимодействие с клиентами",
     "description": "Tracker category name"
   },
+  "data_collection_summary": {
+    "message": "Сводка о сборе данных"
+  },
   "detailed_view": {
     "message": "Детальный просмотр"
   },
@@ -204,9 +222,6 @@
   },
   "don_t_ask_again": {
     "message": "Не спрашивай больше"
-  },
-  "done": {
-    "message": "Готово"
   },
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "Ghostery не работает из-за ограничений браузера и отсутствия дополнительных разрешений."
@@ -236,6 +251,9 @@
   "enter_website_url": {
     "message": "Enter website URL"
   },
+  "error__type__message__stack_trace": {
+    "message": "ошибка: тип, сообщение, трассировка стека"
+  },
   "errors__@_0__": {
     "message": "Ошибки ($${0})"
   },
@@ -254,6 +272,12 @@
   },
   "experimental_filters": {
     "message": "Экспериментальные фильтры"
+  },
+  "extension__version__installation_date__random_install_number__from_1_to_100___basic_settings__contribution_status": {
+    "message": "расширение: версия, дата установки, случайный номер установки (от 1 до 100), основные настройки, статус вклада"
+  },
+  "extension_id_is_removed_from_the_stack_traces_": {
+    "message": "Идентификатор расширения удален из трассировок стека."
   },
   "extensions": {
     "message": "Расширения",
@@ -289,6 +313,9 @@
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery приостановлен на этом сайте."
   },
+  "ghostery_never_collects_personal_information_like_passwords__browsing_history_or_the_content_of_the_pages_you_visit_": {
+    "message": "Ghostery никогда не собирает личную информацию, такую как пароли, история браузера или содержимое посещаемых вами страниц."
+  },
   "ghostery_paused": {
     "message": "Ghostery сделал паузу"
   },
@@ -307,6 +334,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery будет показывать количество трекеров, заблокированных на странице. Чтобы посмотреть более подробную статистику, нажмите на значок расширения."
   },
+  "hashes_of_potentially_unique_identifier_in_requests_parameters": {
+    "message": "хеши потенциально уникального идентификатора в параметрах запросов"
+  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Помогите Ghostery в борьбе за конфиденциальность как за основное право человека."
   },
@@ -323,8 +353,8 @@
   "ignore": {
     "message": "Игнорировать"
   },
-  "information_about_web_trackers__add_on_health_and_performance_telemetry_will_be_shared_in_accordance_with_our__a_href__@_0___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "Информация о веб-трекерах, телеметрии состояния и производительности дополнений будет передаваться в соответствии с нашей <a href=\"$${0}\" target=\"_blank\" rel=\"noreferrer\">Политикой конфиденциальности</a>, улучшая защиту конфиденциальности для сообщества Ghostery.",
+  "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_health__a__and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "Информация о <a href=\"$${0}\">веб-трекерах</a>, <a href=\"$${1}\">состоянии дополнений</a> и <a href=\"$${2}\">телеметрии производительности</a> будет передаваться в соответствии с нашей <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Политикой конфиденциальности</a>, способствуя усилению защиты конфиденциальности для сообщества Ghostery.",
     "description": "'add-on' means 'browser extension'"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
@@ -333,8 +363,11 @@
   "join_ghostery": {
     "message": "Присоединяйтесь к Ghostery"
   },
+  "k_anonymity_protected_reports_of_page_shows": {
+    "message": "k-анонимные защищенные отчеты о показах страниц"
+  },
   "keep_disabled": {
-    "message": "Не включать"
+    "message": "Оставить отключенным"
   },
   "last_update__@_0_": {
     "message": "Последнее обновление: $${0}"
@@ -440,6 +473,9 @@
   "paused": {
     "message": "Приостановлено"
   },
+  "performance_telemetry": {
+    "message": "Телеметрия производительности"
+  },
   "permission_required": {
     "message": "Требуется разрешение"
   },
@@ -482,6 +518,9 @@
   "report_a_broken_page": {
     "message": "Сообщить о поврежденной странице"
   },
+  "request_metadata_of_potential_web_trackers": {
+    "message": "запросить метаданные потенциальных веб-трекеров"
+  },
   "save": {
     "message": "Сохранить"
   },
@@ -502,6 +541,9 @@
   },
   "send_feedback": {
     "message": "Отправить отзыв"
+  },
+  "sentry_sdk_is_in_use_to_gather_and_send_the_reports__but_sentry_does_only_receive_information_above___no_two_requests_can_be_linked_with_one_another_and_browser_ip_is_never_shared_with_sentry_": {
+    "message": "SDK Sentry используется для сбора и отправки отчетов, но Sentry получает только вышеуказанную информацию - никакие два запроса не могут быть связаны друг с другом, и IP-адрес браузера никогда не передается в Sentry."
   },
   "settings_sync": {
     "message": "Синхронизация настроек"
@@ -535,6 +577,9 @@
   "software_licenses": {
     "message": "Лицензии на программное обеспечение"
   },
+  "statistical_reports_on_navigational_routes": {
+    "message": "статистические отчеты о навигационных маршрутах"
+  },
   "submit_a_new_tracker": {
     "message": "Отправить новый трекер"
   },
@@ -562,6 +607,15 @@
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "Чтобы настроить защиту конфиденциальности, доверьтесь сайту:"
+  },
+  "to_get_insights_on_add_on_usage__the_following_information_about_the_browser_and_the_extension_is_collected_": {
+    "message": "Чтобы получить информацию об использовании дополнений, собирается следующая информация о браузере и расширении:"
+  },
+  "to_monitor_critical_crash_information_of_the_extension__the_following_information_about_errors_is_collected_": {
+    "message": "Для отслеживания критической информации о сбоях расширения собирается следующая информация об ошибках:"
+  },
+  "to_provide_privacy_protection_features__the_following_information_about_web_trackers_is_collected_": {
+    "message": "Для обеспечения функций защиты конфиденциальности собирается следующая информация о веб-трекерах:"
   },
   "tracker_database": {
     "message": "База данных трекера"
@@ -638,6 +692,9 @@
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "Мы знаем, что ты полагаешься на Ghostery для бесперебойной работы с YouTube. Пока не появится более совершенное решение, вот временное исправление."
   },
+  "web_trackers": {
+    "message": "Веб-трекеры"
+  },
   "website": {
     "message": "Веб-сайт"
   },
@@ -662,8 +719,8 @@
   "whotracks_me_wheel": {
     "message": "Колесо WhoTracks.Me"
   },
-  "without_privacy_features_enabled__only_basic_functionality_of_naming_trackers_is_available_": {
-    "message": "Без включенных функций приватности доступен только базовый функционал именных трекеров."
+  "with_ghostery_disabled__only_the_basic_functionality_of_naming_trackers_is_available_": {
+    "message": "При отключенном Ghostery доступна только базовая функция именования трекеров."
   },
   "you_are_awesome_": {
     "message": "Отлично!"
