--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -41,6 +41,9 @@
   "add_exception": {
     "message": "添加例外"
   },
+  "add_on_health": {
+    "message": "附加组件健康"
+  },
   "add_website": {
     "message": "添加网站"
   },
@@ -97,6 +100,9 @@
   "become_a_contributor": {
     "message": "成为贡献者"
   },
+  "being_an_eu_company__ghostery_strictly_adheres_to_the_gdpr__the_general_data_protection_regulation___which_regulates_data_collection_to_ensure_user_s_privacy_": {
+    "message": "作为一家欧盟公司，Ghostery 严格遵守 GDPR（通用数据保护条例），该条例规范数据收集以确保用户隐私。."
+  },
   "block_all__recommended_": {
     "message": "阻止所有（推荐）"
   },
@@ -122,6 +128,12 @@
   "blocks_additional_ads__trackers__and_pop_ups_specific_to_the_language_of_websites_you_visit__enable_only_the_languages_you_need_to_avoid_slowing_down_your_browser_": {
     "message": "阻止特定于您访问的网站语言的额外广告、跟踪器和弹出窗口。仅启用您需要的语言，以避免减慢浏览器速度。."
   },
+  "browser__vendor": {
+    "message": "浏览器：供应商"
+  },
+  "browser__vendor__version__language__operating_system_vendor": {
+    "message": "浏览器：供应商、版本、语言、操作系统供应商"
+  },
   "cancel": {
     "message": "取消"
   },
@@ -134,6 +146,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "点击搜索栏旁边的拼图图标，将 Ghostery 固定在工具栏。"
+  },
+  "close": {
+    "message": "关闭"
   },
   "collapse": {
     "message": "折叠"
@@ -184,6 +199,9 @@
     "message": "客户互动",
     "description": "Tracker category name"
   },
+  "data_collection_summary": {
+    "message": "数据收集摘要"
+  },
   "detailed_view": {
     "message": "详细视图"
   },
@@ -204,9 +222,6 @@
   },
   "don_t_ask_again": {
     "message": "别再问了"
-  },
-  "done": {
-    "message": "完成"
   },
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "由于浏览器限制和附加权限缺失，Ghostery 无法为您提供保护。"
@@ -236,6 +251,9 @@
   "enter_website_url": {
     "message": "输入网站 URL"
   },
+  "error__type__message__stack_trace": {
+    "message": "错误：类型，消息，堆栈跟踪"
+  },
   "errors__@_0__": {
     "message": "错误 ($${0})"
   },
@@ -254,6 +272,12 @@
   },
   "experimental_filters": {
     "message": "实验性过滤器"
+  },
+  "extension__version__installation_date__random_install_number__from_1_to_100___basic_settings__contribution_status": {
+    "message": "扩展：版本，安装日期，随机安装编号（从1到100），基本设置，贡献状态"
+  },
+  "extension_id_is_removed_from_the_stack_traces_": {
+    "message": "扩展 ID 已从堆栈跟踪中移除。."
   },
   "extensions": {
     "message": "扩展",
@@ -289,6 +313,9 @@
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery 已在此网站上暂停。"
   },
+  "ghostery_never_collects_personal_information_like_passwords__browsing_history_or_the_content_of_the_pages_you_visit_": {
+    "message": "Ghostery从不收集个人信息，如密码、浏览历史或您访问页面的内容。."
+  },
   "ghostery_paused": {
     "message": "Ghostery暂停了"
   },
@@ -307,6 +334,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery 会显示页面上已阻止的跟踪器数量。点击 Ghostery 图标，获取更多详情。"
   },
+  "hashes_of_potentially_unique_identifier_in_requests_parameters": {
+    "message": "请求参数中可能唯一标识符的哈希值"
+  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "帮助 Ghostery 为建立以隐私为基本人权的网络而奋斗。"
   },
@@ -323,8 +353,8 @@
   "ignore": {
     "message": "忽略"
   },
-  "information_about_web_trackers__add_on_health_and_performance_telemetry_will_be_shared_in_accordance_with_our__a_href__@_0___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "有关网页追踪器、附加组件健康和性能遥测的信息将根据我们的<a href=\"$${0}\" target=\"_blank\" rel=\"noreferrer\">隐私政策</a>进行共享，推进Ghostery社区的隐私保护。.",
+  "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_health__a__and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "有关<a href=\"$${0}\">网络追踪器</a>、<a href=\"$${1}\">附加组件健康</a>和<a href=\"$${2}\">性能遥测</a>的信息将根据我们的<a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">隐私政策</a>共享，以提升Ghostery社区的隐私保护。.",
     "description": "'add-on' means 'browser extension'"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
@@ -332,6 +362,9 @@
   },
   "join_ghostery": {
     "message": "加入 Ghostery"
+  },
+  "k_anonymity_protected_reports_of_page_shows": {
+    "message": "k-匿名保护的页面显示报告"
   },
   "keep_disabled": {
     "message": "保持禁用"
@@ -440,6 +473,9 @@
   "paused": {
     "message": "已暂停"
   },
+  "performance_telemetry": {
+    "message": "性能遥测"
+  },
   "permission_required": {
     "message": "需要权限"
   },
@@ -482,6 +518,9 @@
   "report_a_broken_page": {
     "message": "报告崩溃页面"
   },
+  "request_metadata_of_potential_web_trackers": {
+    "message": "请求潜在网络跟踪器的元数据"
+  },
   "save": {
     "message": "保存"
   },
@@ -502,6 +541,9 @@
   },
   "send_feedback": {
     "message": "发送反馈"
+  },
+  "sentry_sdk_is_in_use_to_gather_and_send_the_reports__but_sentry_does_only_receive_information_above___no_two_requests_can_be_linked_with_one_another_and_browser_ip_is_never_shared_with_sentry_": {
+    "message": "Sentry SDK用于收集和发送报告，但Sentry只接收上述信息——没有两个请求可以相互关联，浏览器IP也不会与Sentry共享。."
   },
   "settings_sync": {
     "message": "设置同步"
@@ -535,6 +577,9 @@
   "software_licenses": {
     "message": "软件许可证"
   },
+  "statistical_reports_on_navigational_routes": {
+    "message": "航线统计报告"
+  },
   "submit_a_new_tracker": {
     "message": "提交新跟踪器"
   },
@@ -562,6 +607,15 @@
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "要调整隐私保护，请信任一个网站："
+  },
+  "to_get_insights_on_add_on_usage__the_following_information_about_the_browser_and_the_extension_is_collected_": {
+    "message": "为了获取有关附加组件使用情况的见解，将收集以下有关浏览器和扩展程序的信息："
+  },
+  "to_monitor_critical_crash_information_of_the_extension__the_following_information_about_errors_is_collected_": {
+    "message": "为了监控扩展的关键崩溃信息，收集以下错误信息："
+  },
+  "to_provide_privacy_protection_features__the_following_information_about_web_trackers_is_collected_": {
+    "message": "为了提供隐私保护功能，收集以下有关网络追踪器的信息："
   },
   "tracker_database": {
     "message": "追踪器数据库"
@@ -638,6 +692,9 @@
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "我们知道，您依赖 Ghostery 来获得流畅的 YouTube 体验。在更完善的解决方案出现之前，这里有一个临时解决方案。"
   },
+  "web_trackers": {
+    "message": "网络追踪器"
+  },
   "website": {
     "message": "网站"
   },
@@ -662,8 +719,8 @@
   "whotracks_me_wheel": {
     "message": "WhoTracks.Me 轮"
   },
-  "without_privacy_features_enabled__only_basic_functionality_of_naming_trackers_is_available_": {
-    "message": "没有启用隐私功能，只有命名跟踪器的基本功能可用。"
+  "with_ghostery_disabled__only_the_basic_functionality_of_naming_trackers_is_available_": {
+    "message": "禁用Ghostery后，仅提供命名跟踪器的基本功能。."
   },
   "you_are_awesome_": {
     "message": "太棒啦！"
