--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -41,6 +41,9 @@
   "add_exception": {
     "message": "新增例外"
   },
+  "add_on_health": {
+    "message": "附加元件健康状况"
+  },
   "add_website": {
     "message": "新增網站"
   },
@@ -97,6 +100,9 @@
   "become_a_contributor": {
     "message": "成為捐助者"
   },
+  "being_an_eu_company__ghostery_strictly_adheres_to_the_gdpr__the_general_data_protection_regulation___which_regulates_data_collection_to_ensure_user_s_privacy_": {
+    "message": "作為一家歐盟公司，Ghostery 嚴格遵循 GDPR（通用數據保護條例），該條例規範數據收集以確保用戶隱私。."
+  },
   "block_all__recommended_": {
     "message": "阻止所有（推薦）"
   },
@@ -122,6 +128,12 @@
   "blocks_additional_ads__trackers__and_pop_ups_specific_to_the_language_of_websites_you_visit__enable_only_the_languages_you_need_to_avoid_slowing_down_your_browser_": {
     "message": "阻擋您所訪問網站語言特定的額外廣告、追蹤器和彈出視窗。僅啟用您需要的語言，以避免減慢瀏覽器速度。."
   },
+  "browser__vendor": {
+    "message": "瀏覽器：供應商"
+  },
+  "browser__vendor__version__language__operating_system_vendor": {
+    "message": "瀏覽器：供應商、版本、語言、作業系統供應商"
+  },
   "cancel": {
     "message": "取消"
   },
@@ -134,6 +146,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "點擊搜尋欄位旁邊的拼圖圖示，將 Ghostery 釘選至工具列。"
+  },
+  "close": {
+    "message": "關閉"
   },
   "collapse": {
     "message": "折疊"
@@ -184,6 +199,9 @@
     "message": "客戶互動",
     "description": "Tracker category name"
   },
+  "data_collection_summary": {
+    "message": "資料收集摘要"
+  },
   "detailed_view": {
     "message": "詳細圖示"
   },
@@ -204,9 +222,6 @@
   },
   "don_t_ask_again": {
     "message": "不要再問"
-  },
-  "done": {
-    "message": "完成"
   },
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "由於瀏覽器限制和缺少額外權限，Ghostery 無法為您提供保護。"
@@ -236,6 +251,9 @@
   "enter_website_url": {
     "message": "輸入網站網址"
   },
+  "error__type__message__stack_trace": {
+    "message": "錯誤：類型、訊息、堆疊追蹤"
+  },
   "errors__@_0__": {
     "message": "錯誤 ($${0})"
   },
@@ -254,6 +272,12 @@
   },
   "experimental_filters": {
     "message": "實驗性過濾器"
+  },
+  "extension__version__installation_date__random_install_number__from_1_to_100___basic_settings__contribution_status": {
+    "message": "擴充功能：版本、安裝日期、隨機安裝號碼（從1到100）、基本設定、貢獻狀態"
+  },
+  "extension_id_is_removed_from_the_stack_traces_": {
+    "message": "擴充功能 ID 已從堆疊追蹤中移除。."
   },
   "extensions": {
     "message": "擴展",
@@ -289,6 +313,9 @@
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery 已在此網站上暫停。"
   },
+  "ghostery_never_collects_personal_information_like_passwords__browsing_history_or_the_content_of_the_pages_you_visit_": {
+    "message": "Ghostery從不收集個人資訊，例如密碼、瀏覽歷史或您訪問的頁面內容。."
+  },
   "ghostery_paused": {
     "message": "Ghostery暫停"
   },
@@ -307,6 +334,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery 將顯示頁面中已經阻擋的追蹤器數量。點擊 Ghostery 圖示可以顯示更多資訊。"
   },
+  "hashes_of_potentially_unique_identifier_in_requests_parameters": {
+    "message": "請求參數中潛在唯一識別碼的雜湊值"
+  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "協助 Ghostery 為建立以隱私為基本人權的網路而奮鬥。"
   },
@@ -323,8 +353,8 @@
   "ignore": {
     "message": "忽略"
   },
-  "information_about_web_trackers__add_on_health_and_performance_telemetry_will_be_shared_in_accordance_with_our__a_href__@_0___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "有關網頁追蹤器、附加元件健康狀況和效能遙測的資訊將根據我們的<a href=\"$${0}\" target=\"_blank\" rel=\"noreferrer\">隱私政策</a>分享，進一步保護Ghostery社群的隱私。.",
+  "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_health__a__and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "有關<a href=\"$${0}\">網路追蹤器</a>、<a href=\"$${1}\">附加元件健康狀況</a>和<a href=\"$${2}\">效能遙測</a>的信息將根據我們的<a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">隱私政策</a>進行分享，以促進Ghostery社群的隱私保護。.",
     "description": "'add-on' means 'browser extension'"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
@@ -333,8 +363,11 @@
   "join_ghostery": {
     "message": "加入 Ghostery"
   },
+  "k_anonymity_protected_reports_of_page_shows": {
+    "message": "k-匿名性保護的頁面顯示報告"
+  },
   "keep_disabled": {
-    "message": "保持關閉"
+    "message": "保持停用"
   },
   "last_update__@_0_": {
     "message": "最後更新：$${0}"
@@ -440,6 +473,9 @@
   "paused": {
     "message": "暫停"
   },
+  "performance_telemetry": {
+    "message": "效能遙測"
+  },
   "permission_required": {
     "message": "需要權限"
   },
@@ -482,6 +518,9 @@
   "report_a_broken_page": {
     "message": "報告已損毀的網頁"
   },
+  "request_metadata_of_potential_web_trackers": {
+    "message": "請求潛在網路追蹤器的元數據"
+  },
   "save": {
     "message": "儲存"
   },
@@ -502,6 +541,9 @@
   },
   "send_feedback": {
     "message": "發送反饋"
+  },
+  "sentry_sdk_is_in_use_to_gather_and_send_the_reports__but_sentry_does_only_receive_information_above___no_two_requests_can_be_linked_with_one_another_and_browser_ip_is_never_shared_with_sentry_": {
+    "message": "Sentry SDK 用於收集和發送報告，但 Sentry 只接收上述信息——兩個請求之間無法互相關聯，且瀏覽器 IP 永遠不會與 Sentry 共享。."
   },
   "settings_sync": {
     "message": "設定同步"
@@ -535,6 +577,9 @@
   "software_licenses": {
     "message": "軟體准許證"
   },
+  "statistical_reports_on_navigational_routes": {
+    "message": "航行路線的統計報告"
+  },
   "submit_a_new_tracker": {
     "message": "提交一個新的網頁跟蹤器"
   },
@@ -562,6 +607,15 @@
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "要調整隱私保護，請信任一個網站："
+  },
+  "to_get_insights_on_add_on_usage__the_following_information_about_the_browser_and_the_extension_is_collected_": {
+    "message": "為了獲取附加元件使用情況的見解，會收集以下有關瀏覽器和擴充功能的信息："
+  },
+  "to_monitor_critical_crash_information_of_the_extension__the_following_information_about_errors_is_collected_": {
+    "message": "為了監控擴充功能的關鍵崩潰資訊，會收集以下錯誤資訊："
+  },
+  "to_provide_privacy_protection_features__the_following_information_about_web_trackers_is_collected_": {
+    "message": "為了提供隱私保護功能，會收集以下有關網路追蹤器的資訊："
   },
   "tracker_database": {
     "message": "追蹤程式資料庫"
@@ -638,6 +692,9 @@
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "我們知道您依靠 Ghostery 來獲得流暢的 YouTube 體驗。 在出現更完善的解決方案之前，這裡有一個臨時解決方案。"
   },
+  "web_trackers": {
+    "message": "網路追蹤器"
+  },
   "website": {
     "message": "網站"
   },
@@ -662,8 +719,8 @@
   "whotracks_me_wheel": {
     "message": "WhoTracks.Me 輪盤"
   },
-  "without_privacy_features_enabled__only_basic_functionality_of_naming_trackers_is_available_": {
-    "message": "啟用隱私功能後，僅提供命名追蹤器的基本功能。"
+  "with_ghostery_disabled__only_the_basic_functionality_of_naming_trackers_is_available_": {
+    "message": "禁用 Ghostery 時，只有命名追蹤器的基本功能可用。."
   },
   "you_are_awesome_": {
     "message": "太棒啦！"
