--- a/src/_locales/de/messages.json
+++ b/src/_locales/de/messages.json
@@ -41,6 +41,9 @@
   "add_exception": {
     "message": "Ausnahme hinzufügen"
   },
+  "add_on_s_health": {
+    "message": "Gesundheit des Add-ons"
+  },
   "add_website": {
     "message": "Webseite hinzufügen"
   },
@@ -97,6 +100,9 @@
   "become_a_contributor": {
     "message": "Werde Ghostery-Förderer"
   },
+  "being_an_eu_company__ghostery_strictly_adheres_to_the_gdpr__the_general_data_protection_regulation___which_regulates_data_collection_to_ensure_user_s_privacy_": {
+    "message": "Als europäisches Unternehmen hält sich Ghostery streng an die Datenschutz-Grundverordnung (DSGVO) der EU. Diese Verordnung regelt die Datenerhebung und stellt sicher, dass die Privatsphäre der Nutzer im Internet geschützt wird."
+  },
   "block_all__recommended_": {
     "message": "Alle blockieren (empfohlen)"
   },
@@ -122,6 +128,12 @@
   "blocks_additional_ads__trackers__and_pop_ups_specific_to_the_language_of_websites_you_visit__enable_only_the_languages_you_need_to_avoid_slowing_down_your_browser_": {
     "message": "Blockiert zusätzlich sprachspezifische Werbung, Tracker und Pop-ups auf den von dir besuchten Webseiten. Aktiviere nur die benötigten Sprachen, um deinen Browser nicht zu verlangsamen."
   },
+  "browser__vendor": {
+    "message": "Browser: Anbieter"
+  },
+  "browser__vendor__version__language__operating_system_vendor": {
+    "message": "Browser: Anbieter, Version, Sprache, Betriebssystemanbieter"
+  },
   "cancel": {
     "message": "Abbrechen"
   },
@@ -134,6 +146,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "Klicken Sie auf das Puzzle-Symbol neben der Suchleiste, um Ghostery an die Werkzeugleiste anzuheften."
+  },
+  "close": {
+    "message": "Schließen"
   },
   "collapse": {
     "message": "Weniger anzeigen"
@@ -184,6 +199,9 @@
     "message": "Kundeninteraktion",
     "description": "Tracker category name"
   },
+  "data_collection_summary": {
+    "message": "Datenerfassung Zusammenfassung"
+  },
   "detailed_view": {
     "message": "Detailansicht"
   },
@@ -204,9 +222,6 @@
   },
   "don_t_ask_again": {
     "message": "Frag nicht noch einmal"
-  },
-  "done": {
-    "message": "Erledigt"
   },
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "Aufgrund von Browser-Einschränkungen und fehlenden zusätzlichen Berechtigungen kann Ghostery Sie nicht schützen."
@@ -236,6 +251,9 @@
   "enter_website_url": {
     "message": "URL der Website eingeben"
   },
+  "error__type__message__stack_trace": {
+    "message": "Fehler: Typ, Nachricht, Stack-Trace"
+  },
   "errors__@_0__": {
     "message": "Fehler ($${0})"
   },
@@ -254,6 +272,12 @@
   },
   "experimental_filters": {
     "message": "Experimentelle Filter"
+  },
+  "extension__version__installation_date__random_install_number__from_1_to_100___basic_settings__contribution_status": {
+    "message": "Erweiterung: Version, Installationsdatum, zufällige Installationsnummer (von 1 bis 100), Grundeinstellungen, Unterstützungsstatus"
+  },
+  "extension_id_is_removed_from_the_stack_traces_": {
+    "message": "Die Erweiterungs-ID wird aus den Stack-Traces entfernt."
   },
   "extensions": {
     "message": "Erweiterungen",
@@ -289,6 +313,9 @@
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery pausiert auf dieser Website."
   },
+  "ghostery_never_collects_personal_information_like_passwords__browsing_history_or_the_content_of_the_pages_you_visit_": {
+    "message": "Ghostery erfasst niemals persönliche Daten wie Passwörter, den Browserverlauf oder die Inhalte besuchter Seiten."
+  },
   "ghostery_paused": {
     "message": "Ghostery pausiert"
   },
@@ -307,6 +334,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery zeigt Ihnen, wie viele Tracker auf einer Seite blockiert wurden. Wenn Sie auf das Ghostery-Symbol klicken, erhalten Sie detailliertere Informationen."
   },
+  "hashes_of_potentially_unique_identifier_in_requests_parameters": {
+    "message": "Hashes von potenziell eindeutigen Identifikatoren in Anfrageparametern"
+  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Helfen Sie Ghostery, für ein Web zu kämpfen, in dem Privatsphäre ein grundlegendes Menschenrecht ist."
   },
@@ -323,8 +353,8 @@
   "ignore": {
     "message": "Ignorieren"
   },
-  "information_about_web_trackers__add_on_health_and_performance_telemetry_will_be_shared_in_accordance_with_our__a_href__@_0___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "Informationen über Web-Tracker, sowie Funktions- und Leistungsanalyse der Erweiterung werden gemäß unserer <a href=\"$${0}\" target=\"_blank\" rel=\"noreferrer\">Datenschutzerklärung</a> weitergegeben, um den Schutz der Privatsphäre in der gesamten Ghostery-Community zu verbessern.",
+  "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "Informationen über <a href=\"$${0}\">Web-Tracker</a>, <a href=\"$${1}\">Add-on-Gesundheit</a> und <a href=\"$${2}\">Leistungstelemetrie</a> werden gemäß unserer <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Datenschutzrichtlinie</a> geteilt, um den Datenschutz für die Ghostery-Community zu verbessern.",
     "description": "'add-on' means 'browser extension'"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
@@ -332,6 +362,9 @@
   },
   "join_ghostery": {
     "message": "Schließen Sie sich Ghostery an"
+  },
+  "k_anonymity_protected_reports_of_page_shows": {
+    "message": "k-Anonymität-geschützte Berichte von Seitenansichten"
   },
   "keep_disabled": {
     "message": "Deaktiviert lassen"
@@ -440,6 +473,9 @@
   "paused": {
     "message": "Pausiert"
   },
+  "performance_telemetry": {
+    "message": "Leistungstelemetrie"
+  },
   "permission_required": {
     "message": "Berechtigung erforderlich"
   },
@@ -482,6 +518,9 @@
   "report_a_broken_page": {
     "message": "Fehlerhafte Seite melden"
   },
+  "request_metadata_of_potential_web_trackers": {
+    "message": "Metadaten potenzieller Web-Tracker anfordern"
+  },
   "save": {
     "message": "Speichern"
   },
@@ -502,6 +541,9 @@
   },
   "send_feedback": {
     "message": "Feedback senden"
+  },
+  "sentry_sdk_is_in_use_to_gather_and_send_the_reports__but_sentry_does_only_receive_information_above___no_two_requests_can_be_linked_with_one_another_and_browser_ip_is_never_shared_with_sentry_": {
+    "message": "Das Sentry SDK wird verwendet, um Berichte zu sammeln und zu senden, aber Sentry erhält nur die oben genannten Informationen - keine zwei Anfragen können miteinander verknüpft werden und die IP-Adresse des Browsers wird niemals mit Sentry geteilt."
   },
   "settings_sync": {
     "message": "Synchronisationseinstellungen"
@@ -535,6 +577,9 @@
   "software_licenses": {
     "message": "Software-Lizenzen"
   },
+  "statistical_reports_on_navigational_routes": {
+    "message": "statistische Berichte über Navigationsrouten"
+  },
   "submit_a_new_tracker": {
     "message": "Neuen Tracker senden"
   },
@@ -562,6 +607,15 @@
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "Zur Anpassung der Einstellungen, vertrauen Sie einer Webseite:"
+  },
+  "to_get_insights_on_add_on_usage__the_following_information_about_the_browser_and_the_extension_is_collected_": {
+    "message": "Um Einblicke in die Nutzung von Add-ons zu erhalten, werden folgende Informationen über den Browser und die Erweiterung gesammelt:"
+  },
+  "to_monitor_critical_crash_information_of_the_extension__the_following_information_about_errors_is_collected_": {
+    "message": "Um kritische Absturzinformationen der Erweiterung zu überwachen, werden folgende Informationen über Fehler gesammelt:"
+  },
+  "to_provide_privacy_protection_features__the_following_information_about_web_trackers_is_collected_": {
+    "message": "Um Datenschutzfunktionen bereitzustellen, werden die folgenden Informationen über Web-Tracker gesammelt:"
   },
   "tracker_database": {
     "message": "Tracker Datenbank"
@@ -638,6 +692,9 @@
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "Wir wissen, dass du dich für ein reibungsloses YouTube-Erlebnis auf Ghostery verlässt. Bis eine bessere Lösung gefunden ist, haben wir hier eine vorübergehende Lösung."
   },
+  "web_trackers": {
+    "message": "Web-Tracker"
+  },
   "website": {
     "message": "Website"
   },
@@ -662,8 +719,8 @@
   "whotracks_me_wheel": {
     "message": "Whotracks.me-Rad"
   },
-  "without_privacy_features_enabled__only_basic_functionality_of_naming_trackers_is_available_": {
-    "message": "Ohne aktivierte Datenschutzfunktionen steht nur die Grundfunktion zur Benennung von Trackern zur Verfügung."
+  "with_ghostery_disabled__only_the_basic_functionality_of_naming_trackers_is_available_": {
+    "message": "Wenn Ghostery deaktiviert ist, steht nur die grundlegende Funktionalität zur Benennung von Trackern zur Verfügung."
   },
   "you_are_awesome_": {
     "message": "Sie sind toll!"
