--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -41,6 +41,9 @@
   "add_exception": {
     "message": "Agregar excepción"
   },
+  "add_on_s_health": {
+    "message": "Salud del Complemento"
+  },
   "add_website": {
     "message": "Agregar sitio web"
   },
@@ -97,6 +100,9 @@
   "become_a_contributor": {
     "message": "Conviértete en Contribuyente"
   },
+  "being_an_eu_company__ghostery_strictly_adheres_to_the_gdpr__the_general_data_protection_regulation___which_regulates_data_collection_to_ensure_user_s_privacy_": {
+    "message": "Siendo una empresa de la UE, Ghostery se adhiere estrictamente al RGPD (Reglamento General de Protección de Datos), que regula la recopilación de datos para garantizar la privacidad del usuario."
+  },
   "block_all__recommended_": {
     "message": "Bloquear todo (recomendado)"
   },
@@ -122,6 +128,12 @@
   "blocks_additional_ads__trackers__and_pop_ups_specific_to_the_language_of_websites_you_visit__enable_only_the_languages_you_need_to_avoid_slowing_down_your_browser_": {
     "message": "Bloquea anuncios adicionales, rastreadores y ventanas emergentes específicos del idioma de los sitios web que visitas. Habilita solo los idiomas que necesitas para evitar ralentizar tu navegador."
   },
+  "browser__vendor": {
+    "message": "navegador: proveedor"
+  },
+  "browser__vendor__version__language__operating_system_vendor": {
+    "message": "navegador: proveedor, versión, idioma, proveedor del sistema operativo"
+  },
   "cancel": {
     "message": "Cancelar"
   },
@@ -134,6 +146,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "Haz clic en el icono con forma de puzle que está junto a la barra de búsqueda y ancla Ghostery a la barra de herramientas."
+  },
+  "close": {
+    "message": "Cerrar"
   },
   "collapse": {
     "message": "Contraer"
@@ -184,6 +199,9 @@
     "message": "Interacción con el cliente",
     "description": "Tracker category name"
   },
+  "data_collection_summary": {
+    "message": "Resumen de Recolección de Datos"
+  },
   "detailed_view": {
     "message": "Vista detallada"
   },
@@ -204,9 +222,6 @@
   },
   "don_t_ask_again": {
     "message": "No vuelvas a preguntar"
-  },
-  "done": {
-    "message": "Hecho"
   },
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "Debido a las restricciones del navegador y a la falta de permisos adicionales, Ghostery no puede protegerte."
@@ -236,6 +251,9 @@
   "enter_website_url": {
     "message": "Introduce la URL del sitio web"
   },
+  "error__type__message__stack_trace": {
+    "message": "error: tipo, mensaje, traza de pila"
+  },
   "errors__@_0__": {
     "message": "Errores ($${0})"
   },
@@ -254,6 +272,12 @@
   },
   "experimental_filters": {
     "message": "Filtros experimentales"
+  },
+  "extension__version__installation_date__random_install_number__from_1_to_100___basic_settings__contribution_status": {
+    "message": "extensión: versión, fecha de instalación, número de instalación aleatorio (del 1 al 100), configuraciones básicas, estado de contribución"
+  },
+  "extension_id_is_removed_from_the_stack_traces_": {
+    "message": "El ID de la extensión se elimina de los rastros de pila."
   },
   "extensions": {
     "message": "Extensiones",
@@ -289,6 +313,9 @@
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery está en pausa en este sitio."
   },
+  "ghostery_never_collects_personal_information_like_passwords__browsing_history_or_the_content_of_the_pages_you_visit_": {
+    "message": "Ghostery nunca recopila información personal como contraseñas, historial de navegación o el contenido de las páginas que visitas."
+  },
   "ghostery_paused": {
     "message": "Ghostery en pausa"
   },
@@ -307,6 +334,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery mostrará cuántos rastreadores ha bloqueado en una página. Si haces clic en el icono de Ghostery, verás información más detallada."
   },
+  "hashes_of_potentially_unique_identifier_in_requests_parameters": {
+    "message": "hashes de identificadores potencialmente únicos en los parámetros de las solicitudes"
+  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Únete a Ghostery en la lucha por una web en la que la privacidad sea un derecho humano básico."
   },
@@ -323,8 +353,8 @@
   "ignore": {
     "message": "Ignorar"
   },
-  "information_about_web_trackers__add_on_health_and_performance_telemetry_will_be_shared_in_accordance_with_our__a_href__@_0___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "La información sobre rastreadores web, telemetría de salud y rendimiento de complementos se compartirá de acuerdo con nuestra <a href=\"$${0}\" target=\"_blank\" rel=\"noreferrer\">Política de Privacidad</a>, avanzando en la protección de la privacidad para la comunidad de Ghostery.",
+  "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "Información sobre <a href=\"$${0}\">rastreadores web</a>, <a href=\"$${1}\">salud de los complementos</a> y <a href=\"$${2}\">telemetría de rendimiento</a> se compartirá de acuerdo con nuestra <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Política de Privacidad</a>, avanzando en la protección de la privacidad para la comunidad de Ghostery.",
     "description": "'add-on' means 'browser extension'"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
@@ -333,8 +363,11 @@
   "join_ghostery": {
     "message": "Únete a Ghostery"
   },
+  "k_anonymity_protected_reports_of_page_shows": {
+    "message": "informes protegidos por k-anonimato de las páginas mostradas"
+  },
   "keep_disabled": {
-    "message": "Mantener deshabilitado"
+    "message": "Mantener desactivado"
   },
   "last_update__@_0_": {
     "message": "Última actualización: $${0}"
@@ -440,6 +473,9 @@
   "paused": {
     "message": "Pausado"
   },
+  "performance_telemetry": {
+    "message": "Telemetría de Rendimiento"
+  },
   "permission_required": {
     "message": "Se requiere permiso"
   },
@@ -482,6 +518,9 @@
   "report_a_broken_page": {
     "message": "Informar página rota"
   },
+  "request_metadata_of_potential_web_trackers": {
+    "message": "solicitar metadatos de posibles rastreadores web"
+  },
   "save": {
     "message": "Guardar"
   },
@@ -502,6 +541,9 @@
   },
   "send_feedback": {
     "message": "Enviar comentarios"
+  },
+  "sentry_sdk_is_in_use_to_gather_and_send_the_reports__but_sentry_does_only_receive_information_above___no_two_requests_can_be_linked_with_one_another_and_browser_ip_is_never_shared_with_sentry_": {
+    "message": "El SDK de Sentry se utiliza para recopilar y enviar los informes, pero Sentry solo recibe la información mencionada anteriormente: no se pueden vincular dos solicitudes entre sí y la IP del navegador nunca se comparte con Sentry."
   },
   "settings_sync": {
     "message": "Sincronizar configuración"
@@ -535,6 +577,9 @@
   "software_licenses": {
     "message": "Licencias de software"
   },
+  "statistical_reports_on_navigational_routes": {
+    "message": "informes estadísticos sobre rutas de navegación"
+  },
   "submit_a_new_tracker": {
     "message": "Enviar nuevo rastreador"
   },
@@ -562,6 +607,15 @@
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "Para ajustar la protección de privacidad confíe en un sitio:"
+  },
+  "to_get_insights_on_add_on_usage__the_following_information_about_the_browser_and_the_extension_is_collected_": {
+    "message": "Para obtener información sobre el uso de complementos, se recopila la siguiente información sobre el navegador y la extensión:"
+  },
+  "to_monitor_critical_crash_information_of_the_extension__the_following_information_about_errors_is_collected_": {
+    "message": "Para monitorear información crítica sobre fallos de la extensión, se recopila la siguiente información sobre errores:"
+  },
+  "to_provide_privacy_protection_features__the_following_information_about_web_trackers_is_collected_": {
+    "message": "Para proporcionar funciones de protección de la privacidad, se recopila la siguiente información sobre los rastreadores web:"
   },
   "tracker_database": {
     "message": "Base de datos de rastreadores"
@@ -638,6 +692,9 @@
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "Sabemos que confías en Ghostery para disfrutar de una experiencia fluida en YouTube. Hasta que aparezca una solución más refinada, aquí tienes una solución temporal."
   },
+  "web_trackers": {
+    "message": "Rastreadores web"
+  },
   "website": {
     "message": "Sitio web"
   },
@@ -662,8 +719,8 @@
   "whotracks_me_wheel": {
     "message": "Rueda de WhoTracks.Me"
   },
-  "without_privacy_features_enabled__only_basic_functionality_of_naming_trackers_is_available_": {
-    "message": "Sin las funciones de privacidad activadas, solo la funcionalidad básica de identificar rastreadores está disponible."
+  "with_ghostery_disabled__only_the_basic_functionality_of_naming_trackers_is_available_": {
+    "message": "Con Ghostery desactivado, solo está disponible la funcionalidad básica de nombrar rastreadores."
   },
   "you_are_awesome_": {
     "message": "¡Eres genial!"
