--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -41,6 +41,9 @@
   "add_exception": {
     "message": "Ajouter une exception"
   },
+  "add_on_s_health": {
+    "message": "Santé de l'extension"
+  },
   "add_website": {
     "message": "Ajouter un site web"
   },
@@ -97,6 +100,9 @@
   "become_a_contributor": {
     "message": "Devenez donateur"
   },
+  "being_an_eu_company__ghostery_strictly_adheres_to_the_gdpr__the_general_data_protection_regulation___which_regulates_data_collection_to_ensure_user_s_privacy_": {
+    "message": "En tant qu'entreprise de l'UE, Ghostery adhère strictement au RGPD (Règlement général sur la protection des données), qui régule la collecte de données pour garantir la confidentialité des utilisateurs."
+  },
   "block_all__recommended_": {
     "message": "Tout bloquer (recommandé)"
   },
@@ -122,6 +128,12 @@
   "blocks_additional_ads__trackers__and_pop_ups_specific_to_the_language_of_websites_you_visit__enable_only_the_languages_you_need_to_avoid_slowing_down_your_browser_": {
     "message": "Bloque des publicités supplémentaires, des trackers et des pop-ups spécifiques à la langue des sites web que vous visitez. Activez uniquement les langues dont vous avez besoin pour éviter de ralentir votre navigateur."
   },
+  "browser__vendor": {
+    "message": "navigateur : fournisseur"
+  },
+  "browser__vendor__version__language__operating_system_vendor": {
+    "message": "navigateur : fournisseur, version, langue, fournisseur du système d'exploitation"
+  },
   "cancel": {
     "message": "Annuler"
   },
@@ -134,6 +146,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "Cliquez sur l'icône de puzzle en regard de la barre de recherche et épinglez Ghostery à votre barre d'outils."
+  },
+  "close": {
+    "message": "Fermer"
   },
   "collapse": {
     "message": "Réduire"
@@ -184,6 +199,9 @@
     "message": "Interaction avec les clients",
     "description": "Tracker category name"
   },
+  "data_collection_summary": {
+    "message": "Résumé de la collecte de données"
+  },
   "detailed_view": {
     "message": "Affichage détaillé"
   },
@@ -204,9 +222,6 @@
   },
   "don_t_ask_again": {
     "message": "Ne demande plus rien"
-  },
-  "done": {
-    "message": "Terminé"
   },
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "En raison des restrictions du navigateur et d'autorisations supplémentaires manquantes, Ghostery n'est pas en mesure de vous protéger."
@@ -236,6 +251,9 @@
   "enter_website_url": {
     "message": "Saisir l'URL du site web"
   },
+  "error__type__message__stack_trace": {
+    "message": "erreur : type, message, trace de la pile"
+  },
   "errors__@_0__": {
     "message": "Erreurs ($${0})"
   },
@@ -254,6 +272,12 @@
   },
   "experimental_filters": {
     "message": "Filtres expérimentaux"
+  },
+  "extension__version__installation_date__random_install_number__from_1_to_100___basic_settings__contribution_status": {
+    "message": "extension : version, date d'installation, numéro d'installation aléatoire (de 1 à 100), paramètres de base, statut de contribution"
+  },
+  "extension_id_is_removed_from_the_stack_traces_": {
+    "message": "L'identifiant de l'extension est supprimé des traces de pile."
   },
   "extensions": {
     "message": "Extensions",
@@ -289,6 +313,9 @@
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery est en pause sur ce site."
   },
+  "ghostery_never_collects_personal_information_like_passwords__browsing_history_or_the_content_of_the_pages_you_visit_": {
+    "message": "Ghostery ne collecte jamais d'informations personnelles telles que les mots de passe, l'historique de navigation ou le contenu des pages que vous visitez."
+  },
   "ghostery_paused": {
     "message": "Ghostery en pause"
   },
@@ -307,6 +334,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery affichera le nombre de trackers bloqués sur une page. Vous pouvez obtenir des informations détaillées en cliquant sur l'icône Ghostery."
   },
+  "hashes_of_potentially_unique_identifier_in_requests_parameters": {
+    "message": "empreintes de hachage d'identifiants potentiellement uniques dans les paramètres de requêtes"
+  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Aidez Ghostery à lutter pour un Web où la vie privée est un droit humain fondamental."
   },
@@ -323,8 +353,8 @@
   "ignore": {
     "message": "Ignorer"
   },
-  "information_about_web_trackers__add_on_health_and_performance_telemetry_will_be_shared_in_accordance_with_our__a_href__@_0___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "Informations sur les traceurs web, la santé des extensions de navigateur et la télémétrie de performance seront partagées conformément à notre <a href=\"$${0}\" target=\"_blank\" rel=\"noreferrer\">Politique de Confidentialité</a>, renforçant la protection de la vie privée pour la communauté Ghostery.",
+  "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "Informations sur les <a href=\"$${0}\">trackers web</a>, la <a href=\"$${1}\">santé des extensions</a> et la <a href=\"$${2}\">télémétrie de performance</a> seront partagées conformément à notre <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Politique de Confidentialité</a>, renforçant la protection de la vie privée pour la communauté Ghostery.",
     "description": "'add-on' means 'browser extension'"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
@@ -333,8 +363,11 @@
   "join_ghostery": {
     "message": "Rejoignez Ghostery"
   },
+  "k_anonymity_protected_reports_of_page_shows": {
+    "message": "rapports protégés par k-anonymat des affichages de page"
+  },
   "keep_disabled": {
-    "message": "Maintenir désactivé"
+    "message": "Laisser désactivé"
   },
   "last_update__@_0_": {
     "message": "Dernière mise à jour : $${0}"
@@ -440,6 +473,9 @@
   "paused": {
     "message": "En pause"
   },
+  "performance_telemetry": {
+    "message": "Télémétrie de performance"
+  },
   "permission_required": {
     "message": "Autorisation requise"
   },
@@ -482,6 +518,9 @@
   "report_a_broken_page": {
     "message": "Signaler un lien brisé"
   },
+  "request_metadata_of_potential_web_trackers": {
+    "message": "demander les métadonnées des traqueurs web potentiels"
+  },
   "save": {
     "message": "Enregistrer"
   },
@@ -502,6 +541,9 @@
   },
   "send_feedback": {
     "message": "Envoyer des commentaires"
+  },
+  "sentry_sdk_is_in_use_to_gather_and_send_the_reports__but_sentry_does_only_receive_information_above___no_two_requests_can_be_linked_with_one_another_and_browser_ip_is_never_shared_with_sentry_": {
+    "message": "Le SDK Sentry est utilisé pour collecter et envoyer les rapports, mais Sentry ne reçoit que les informations ci-dessus - aucune des deux requêtes ne peut être liée l'une à l'autre et l'adresse IP du navigateur n'est jamais partagée avec Sentry."
   },
   "settings_sync": {
     "message": "Synchronisation des paramètres"
@@ -535,6 +577,9 @@
   "software_licenses": {
     "message": "Licences d'utilisation de logiciels"
   },
+  "statistical_reports_on_navigational_routes": {
+    "message": "rapports statistiques sur les itinéraires de navigation"
+  },
   "submit_a_new_tracker": {
     "message": "Soumettre un nouveau mouchard"
   },
@@ -562,6 +607,15 @@
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "Pour ajuster la protection de la vie privée :"
+  },
+  "to_get_insights_on_add_on_usage__the_following_information_about_the_browser_and_the_extension_is_collected_": {
+    "message": "Pour obtenir des informations sur l'utilisation des modules complémentaires, les données suivantes concernant le navigateur et l'extension sont collectées :"
+  },
+  "to_monitor_critical_crash_information_of_the_extension__the_following_information_about_errors_is_collected_": {
+    "message": "Pour surveiller les informations critiques sur les plantages de l'extension, les informations suivantes sur les erreurs sont collectées :"
+  },
+  "to_provide_privacy_protection_features__the_following_information_about_web_trackers_is_collected_": {
+    "message": "Pour offrir des fonctionnalités de protection de la vie privée, les informations suivantes sur les trackers web sont collectées :"
   },
   "tracker_database": {
     "message": "Fichage de traqueurs"
@@ -638,6 +692,9 @@
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "Nous savons que tu comptes sur Ghostery pour une expérience YouTube fluide. En attendant qu'une solution plus raffinée émerge, voici une solution temporaire."
   },
+  "web_trackers": {
+    "message": "Trackers Web"
+  },
   "website": {
     "message": "Site Web"
   },
@@ -662,8 +719,8 @@
   "whotracks_me_wheel": {
     "message": "Roue whotracks.me"
   },
-  "without_privacy_features_enabled__only_basic_functionality_of_naming_trackers_is_available_": {
-    "message": "Sans activation des fonctionnalités de confidentialité, seule la fonction de base identifiant les traqueurs est disponible."
+  "with_ghostery_disabled__only_the_basic_functionality_of_naming_trackers_is_available_": {
+    "message": "Lorsque Ghostery est désactivé, seule la fonctionnalité de base de nommer les trackers est disponible."
   },
   "you_are_awesome_": {
     "message": "Vous êtes super !"
