--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -41,6 +41,9 @@
   "add_exception": {
     "message": "例外を追加"
   },
+  "add_on_s_health": {
+    "message": "アドオンの健康状態"
+  },
   "add_website": {
     "message": "ウェブサイトを追加"
   },
@@ -97,6 +100,9 @@
   "become_a_contributor": {
     "message": "Contributorになる"
   },
+  "being_an_eu_company__ghostery_strictly_adheres_to_the_gdpr__the_general_data_protection_regulation___which_regulates_data_collection_to_ensure_user_s_privacy_": {
+    "message": "EU企業であるGhosteryは、ユーザーのプライバシーを確保するためにデータ収集を規制するGDPR（一般データ保護規則）を厳格に遵守しています。."
+  },
   "block_all__recommended_": {
     "message": "すべてをブロック (推奨)"
   },
@@ -122,6 +128,12 @@
   "blocks_additional_ads__trackers__and_pop_ups_specific_to_the_language_of_websites_you_visit__enable_only_the_languages_you_need_to_avoid_slowing_down_your_browser_": {
     "message": "追加の広告、トラッカー、ポップアップを、訪問するウェブサイトの言語に特化してブロックします。ブラウザの速度低下を避けるために、必要な言語のみを有効にしてください。."
   },
+  "browser__vendor": {
+    "message": "ブラウザ：ベンダー"
+  },
+  "browser__vendor__version__language__operating_system_vendor": {
+    "message": "ブラウザ：ベンダー、バージョン、言語、オペレーティングシステムベンダー"
+  },
   "cancel": {
     "message": "キャンセル"
   },
@@ -134,6 +146,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "検索バーの横にあるパズルのアイコンをクリックし、Ghosteryをツールバーに固定します。"
+  },
+  "close": {
+    "message": "閉じる"
   },
   "collapse": {
     "message": "折り畳む"
@@ -184,6 +199,9 @@
     "message": "顧客インタラクション",
     "description": "Tracker category name"
   },
+  "data_collection_summary": {
+    "message": "データ収集概要"
+  },
   "detailed_view": {
     "message": "詳細ビュー"
   },
@@ -204,9 +222,6 @@
   },
   "don_t_ask_again": {
     "message": "二度と聞くな"
-  },
-  "done": {
-    "message": "完了"
   },
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "ブラウザの制限および追加権限がないため、Ghosteryによる保護を開始できません。"
@@ -236,6 +251,9 @@
   "enter_website_url": {
     "message": "ウェブサイトのURLを入力"
   },
+  "error__type__message__stack_trace": {
+    "message": "エラー: タイプ、メッセージ、スタックトレース"
+  },
   "errors__@_0__": {
     "message": "エラー ($${0})"
   },
@@ -254,6 +272,12 @@
   },
   "experimental_filters": {
     "message": "実験的フィルター"
+  },
+  "extension__version__installation_date__random_install_number__from_1_to_100___basic_settings__contribution_status": {
+    "message": "拡張機能: バージョン、インストール日、ランダムインストール番号 (1から100まで)、基本設定、貢献状況"
+  },
+  "extension_id_is_removed_from_the_stack_traces_": {
+    "message": "スタックトレースから拡張機能IDが削除されます。."
   },
   "extensions": {
     "message": "拡張機能",
@@ -289,6 +313,9 @@
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghosteryは、このサイトで一時停止しています。"
   },
+  "ghostery_never_collects_personal_information_like_passwords__browsing_history_or_the_content_of_the_pages_you_visit_": {
+    "message": "Ghosteryは、パスワード、閲覧履歴、訪問したページの内容などの個人情報を収集することはありません。."
+  },
   "ghostery_paused": {
     "message": "ゴーストリーの一時停止"
   },
@@ -307,6 +334,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghosteryは、あるページでブロックされたトラッカーの数を表示します。Ghosteryのアイコンをクリックすると、より詳細な情報が表示されます。"
   },
+  "hashes_of_potentially_unique_identifier_in_requests_parameters": {
+    "message": "リクエストパラメータ内の潜在的にユニークな識別子のハッシュ"
+  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Ghosteryはウェブ上でのプライバシーを基本的人権だと考え、それに対する対策を講じています。ぜひサポートをお願いいたします。"
   },
@@ -323,8 +353,8 @@
   "ignore": {
     "message": "無視する"
   },
-  "information_about_web_trackers__add_on_health_and_performance_telemetry_will_be_shared_in_accordance_with_our__a_href__@_0___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "ウェブトラッカー、アドオンのヘルスおよびパフォーマンステレメトリに関する情報は、<a href=\"$${0}\" target=\"_blank\" rel=\"noreferrer\">プライバシーポリシー</a>に従って共有され、Ghosteryコミュニティのプライバシー保護を推進します。.",
+  "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "ウェブトラッカー、アドオンの健康状態、パフォーマンステレメトリーに関する情報は、Ghosteryコミュニティのプライバシー保護を進めるために、当社のプライバシーポリシーに従って共有されます。.",
     "description": "'add-on' means 'browser extension'"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
@@ -333,8 +363,11 @@
   "join_ghostery": {
     "message": "Ghosteryに登録"
   },
+  "k_anonymity_protected_reports_of_page_shows": {
+    "message": "k-匿名性で保護されたページ表示のレポート"
+  },
   "keep_disabled": {
-    "message": "無効にしておく"
+    "message": "無効のままにする"
   },
   "last_update__@_0_": {
     "message": "最終更新日: $${0}"
@@ -440,6 +473,9 @@
   "paused": {
     "message": "一時停止"
   },
+  "performance_telemetry": {
+    "message": "パフォーマンステレメトリ"
+  },
   "permission_required": {
     "message": "許可が必要"
   },
@@ -482,6 +518,9 @@
   "report_a_broken_page": {
     "message": "区切られたページを報告"
   },
+  "request_metadata_of_potential_web_trackers": {
+    "message": "潜在的なウェブトラッカーのメタデータを要求する"
+  },
   "save": {
     "message": "保存"
   },
@@ -502,6 +541,9 @@
   },
   "send_feedback": {
     "message": "フィードバックを送信する"
+  },
+  "sentry_sdk_is_in_use_to_gather_and_send_the_reports__but_sentry_does_only_receive_information_above___no_two_requests_can_be_linked_with_one_another_and_browser_ip_is_never_shared_with_sentry_": {
+    "message": "Sentry SDKはレポートを収集して送信するために使用されていますが、Sentryが受け取る情報は上記のもののみであり、2つのリクエストが互いにリンクされることはなく、ブラウザのIPがSentryと共有されることはありません。."
   },
   "settings_sync": {
     "message": "同期設定"
@@ -535,6 +577,9 @@
   "software_licenses": {
     "message": "ソフトウェア・ライセンス"
   },
+  "statistical_reports_on_navigational_routes": {
+    "message": "航路に関する統計報告書"
+  },
   "submit_a_new_tracker": {
     "message": "新しいトラッカーを提出"
   },
@@ -562,6 +607,15 @@
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "サイトのプライバシー保護を調整するには:"
+  },
+  "to_get_insights_on_add_on_usage__the_following_information_about_the_browser_and_the_extension_is_collected_": {
+    "message": "アドオンの使用状況を把握するために、ブラウザと拡張機能に関する以下の情報が収集されます。"
+  },
+  "to_monitor_critical_crash_information_of_the_extension__the_following_information_about_errors_is_collected_": {
+    "message": "拡張機能の重大なクラッシュ情報を監視するために、エラーに関する以下の情報が収集されます。"
+  },
+  "to_provide_privacy_protection_features__the_following_information_about_web_trackers_is_collected_": {
+    "message": "プライバシー保護機能を提供するために、ウェブトラッカーに関する以下の情報が収集されます。"
   },
   "tracker_database": {
     "message": "トラッカー・データベース"
@@ -638,6 +692,9 @@
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "スムーズなYouTube体験のためにGhosteryに依存していることは承知しています。より洗練されたソリューションが登場するまでの一時的な解決策をご紹介します。"
   },
+  "web_trackers": {
+    "message": "ウェブトラッカー"
+  },
   "website": {
     "message": "ウェブサイト"
   },
@@ -662,8 +719,8 @@
   "whotracks_me_wheel": {
     "message": "WhoTracks.Me Wheel"
   },
-  "without_privacy_features_enabled__only_basic_functionality_of_naming_trackers_is_available_": {
-    "message": "プライバシー機能が有効になっていない場合、トラッカーの命名の基本的な機能のみが利用可能です。"
+  "with_ghostery_disabled__only_the_basic_functionality_of_naming_trackers_is_available_": {
+    "message": "Ghosteryを無効にすると、トラッカーの名前を付ける基本的な機能のみが利用可能です。."
   },
   "you_are_awesome_": {
     "message": "ありがとうございます！"
