--- a/src/_locales/ko/messages.json
+++ b/src/_locales/ko/messages.json
@@ -41,6 +41,9 @@
   "add_exception": {
     "message": "예외 추가"
   },
+  "add_on_s_health": {
+    "message": "애드온의 상태"
+  },
   "add_website": {
     "message": "웹 사이트 추가"
   },
@@ -97,6 +100,9 @@
   "become_a_contributor": {
     "message": "기여자가 되어보세요"
   },
+  "being_an_eu_company__ghostery_strictly_adheres_to_the_gdpr__the_general_data_protection_regulation___which_regulates_data_collection_to_ensure_user_s_privacy_": {
+    "message": "유럽 연합 회사인 Ghostery는 사용자의 프라이버시를 보장하기 위해 데이터 수집을 규제하는 GDPR(일반 데이터 보호 규정)을 엄격히 준수합니다."
+  },
   "block_all__recommended_": {
     "message": "모두 차단 (권장됨)"
   },
@@ -122,6 +128,12 @@
   "blocks_additional_ads__trackers__and_pop_ups_specific_to_the_language_of_websites_you_visit__enable_only_the_languages_you_need_to_avoid_slowing_down_your_browser_": {
     "message": "방문하시는 웹 사이트 언어에 한하여 추가로 광고와 트래커, 팝업을 차단합니다. 필요한 언어만 활성화하면 웹 브라우저가 느려지는걸 방지할 수 있습니다."
   },
+  "browser__vendor": {
+    "message": "브라우저: 공급업체"
+  },
+  "browser__vendor__version__language__operating_system_vendor": {
+    "message": "브라우저: 공급업체, 버전, 언어, 운영 체제 공급업체"
+  },
   "cancel": {
     "message": "취소"
   },
@@ -134,6 +146,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "검색창 옆의 퍼즐 아이콘을 클릭하고 Ghostery를 툴바에 고정하세요."
+  },
+  "close": {
+    "message": "닫기"
   },
   "collapse": {
     "message": "접기"
@@ -184,6 +199,9 @@
     "message": "고객 상담",
     "description": "Tracker category name"
   },
+  "data_collection_summary": {
+    "message": "데이터 수집 요약"
+  },
   "detailed_view": {
     "message": "자세히 보기"
   },
@@ -204,9 +222,6 @@
   },
   "don_t_ask_again": {
     "message": "다시 묻지 않기"
-  },
-  "done": {
-    "message": "완료"
   },
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "브라우저 측의 제한과 부가 권한 누락으로 인해 Ghostery는 여러분을 보호할 수 없습니다."
@@ -236,6 +251,9 @@
   "enter_website_url": {
     "message": "웹 사이트 URL 입력"
   },
+  "error__type__message__stack_trace": {
+    "message": "오류: 유형, 메시지, 스택 추적"
+  },
   "errors__@_0__": {
     "message": "오류 ($${0})"
   },
@@ -254,6 +272,12 @@
   },
   "experimental_filters": {
     "message": "실험적 필터"
+  },
+  "extension__version__installation_date__random_install_number__from_1_to_100___basic_settings__contribution_status": {
+    "message": "확장 프로그램: 버전, 설치 날짜, 무작위 설치 번호 (1에서 100까지), 기본 설정, 기여 상태"
+  },
+  "extension_id_is_removed_from_the_stack_traces_": {
+    "message": "스택 추적에서 확장 ID가 제거됩니다."
   },
   "extensions": {
     "message": "확장 프로그램",
@@ -289,6 +313,9 @@
   "ghostery_is_paused_on_this_site_": {
     "message": "이 웹 사이트에서 Ghostery 사용을 잠시 멈춥니다."
   },
+  "ghostery_never_collects_personal_information_like_passwords__browsing_history_or_the_content_of_the_pages_you_visit_": {
+    "message": "고스트리는 비밀번호, 검색 기록 또는 방문한 페이지의 내용을 수집하지 않습니다."
+  },
   "ghostery_paused": {
     "message": "Ghostery 사용 중지됨"
   },
@@ -307,6 +334,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery가 이 페이지에서 얼마나 많은 트래커가 차단되었는지 보여줍니다. Ghostery 아이콘을 클릭하면 더 자세한 정보를 볼 수 있습니다."
   },
+  "hashes_of_potentially_unique_identifier_in_requests_parameters": {
+    "message": "요청 매개변수의 잠재적으로 고유한 식별자의 해시"
+  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Ghostery가 개인정보 보호가 곧 기본권인 웹 생태계를 위해 싸울 수 있도록 도와주세요."
   },
@@ -323,8 +353,8 @@
   "ignore": {
     "message": "무시"
   },
-  "information_about_web_trackers__add_on_health_and_performance_telemetry_will_be_shared_in_accordance_with_our__a_href__@_0___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "웹 추적기, 애드온 상태 및 성능 원격 측정에 대한 정보는 우리의 <a href=\"$${0}\" target=\"_blank\" rel=\"noreferrer\">개인정보 보호정책</a>에 따라 공유되며, Ghostery 커뮤니티의 개인정보 보호를 강화합니다.",
+  "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "웹 추적기, 애드온의 상태 및 성능 원격 측정에 대한 정보는 Ghostery 커뮤니티의 개인정보 보호를 강화하기 위해 당사의 개인정보 보호정책에 따라 공유됩니다.",
     "description": "'add-on' means 'browser extension'"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
@@ -333,8 +363,11 @@
   "join_ghostery": {
     "message": "Ghostery 가입"
   },
+  "k_anonymity_protected_reports_of_page_shows": {
+    "message": "k-익명성 보호 페이지 보고서 표시"
+  },
   "keep_disabled": {
-    "message": "사용하지 않는 상태로 놔두기"
+    "message": "비활성화 유지"
   },
   "last_update__@_0_": {
     "message": "최종 업데이트: $${0}"
@@ -440,6 +473,9 @@
   "paused": {
     "message": "일시 중지됨"
   },
+  "performance_telemetry": {
+    "message": "성능 원격 측정"
+  },
   "permission_required": {
     "message": "권한 필요함"
   },
@@ -482,6 +518,9 @@
   "report_a_broken_page": {
     "message": "망가진 페이지 제보"
   },
+  "request_metadata_of_potential_web_trackers": {
+    "message": "잠재적인 웹 추적기의 메타데이터 요청"
+  },
   "save": {
     "message": "저장"
   },
@@ -502,6 +541,9 @@
   },
   "send_feedback": {
     "message": "피드백 보내기"
+  },
+  "sentry_sdk_is_in_use_to_gather_and_send_the_reports__but_sentry_does_only_receive_information_above___no_two_requests_can_be_linked_with_one_another_and_browser_ip_is_never_shared_with_sentry_": {
+    "message": "Sentry SDK는 보고서를 수집하고 전송하는 데 사용되지만, Sentry는 위의 정보만 수신하며 두 요청이 서로 연결될 수 없고 브라우저 IP는 Sentry와 공유되지 않습니다."
   },
   "settings_sync": {
     "message": "설정 동기화"
@@ -535,6 +577,9 @@
   "software_licenses": {
     "message": "소프트웨어 라이선스"
   },
+  "statistical_reports_on_navigational_routes": {
+    "message": "항로에 대한 통계 보고서"
+  },
   "submit_a_new_tracker": {
     "message": "새 트래커 제보하기"
   },
@@ -562,6 +607,15 @@
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "웹 사이트에서 특정 시간동안 개인정보 보호를 중지합니다."
+  },
+  "to_get_insights_on_add_on_usage__the_following_information_about_the_browser_and_the_extension_is_collected_": {
+    "message": "애드온 사용에 대한 통찰을 얻기 위해, 브라우저와 확장 프로그램에 대한 다음 정보가 수집됩니다:"
+  },
+  "to_monitor_critical_crash_information_of_the_extension__the_following_information_about_errors_is_collected_": {
+    "message": "확장 프로그램의 중요한 충돌 정보를 모니터링하기 위해 다음과 같은 오류 정보가 수집됩니다:"
+  },
+  "to_provide_privacy_protection_features__the_following_information_about_web_trackers_is_collected_": {
+    "message": "개인정보 보호 기능을 제공하기 위해 다음과 같은 웹 추적기 정보가 수집됩니다"
   },
   "tracker_database": {
     "message": "트래커 데이터베이스"
@@ -638,6 +692,9 @@
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "더 나은 YouTube 사용 환경을 위해 Ghostery 사용하는 것을 알고 있습니다. 보다 나은 해결책이 출시되기 전까지 임시 조치를 취할 수 있습니다."
   },
+  "web_trackers": {
+    "message": "웹 추적기"
+  },
   "website": {
     "message": "웹 사이트"
   },
@@ -662,8 +719,8 @@
   "whotracks_me_wheel": {
     "message": "WhoTracks.Me 휠"
   },
-  "without_privacy_features_enabled__only_basic_functionality_of_naming_trackers_is_available_": {
-    "message": "개인정보 보호 기능을 사용하지 않고서는 기본적인 트래커 감지 기능만 사용할 수 있습니다."
+  "with_ghostery_disabled__only_the_basic_functionality_of_naming_trackers_is_available_": {
+    "message": "Ghostery가 비활성화되면 추적기 이름 지정의 기본 기능만 사용할 수 있습니다."
   },
   "you_are_awesome_": {
     "message": "지원에 진심으로 감사드립니다!"
