--- a/src/_locales/pl/messages.json
+++ b/src/_locales/pl/messages.json
@@ -41,6 +41,9 @@
   "add_exception": {
     "message": "Dodaj wyjątek"
   },
+  "add_on_s_health": {
+    "message": "Stan rozszerzenia"
+  },
   "add_website": {
     "message": "Dodaj stronę internetową"
   },
@@ -97,6 +100,9 @@
   "become_a_contributor": {
     "message": "Zostań Kontrybutorem"
   },
+  "being_an_eu_company__ghostery_strictly_adheres_to_the_gdpr__the_general_data_protection_regulation___which_regulates_data_collection_to_ensure_user_s_privacy_": {
+    "message": "Jako firma z UE, Ghostery ściśle przestrzega RODO (Ogólne rozporządzenie o ochronie danych), które reguluje zbieranie danych w celu zapewnienia prywatności użytkowników."
+  },
   "block_all__recommended_": {
     "message": "Zablokuj wszystkie (zalecane)"
   },
@@ -122,6 +128,12 @@
   "blocks_additional_ads__trackers__and_pop_ups_specific_to_the_language_of_websites_you_visit__enable_only_the_languages_you_need_to_avoid_slowing_down_your_browser_": {
     "message": "Blokuje dodatkowe reklamy, trackery i wyskakujące okienka specyficzne dla języka odwiedzanych stron internetowych. Włącz tylko te języki, które są Ci potrzebne, aby uniknąć spowolnienia przeglądarki."
   },
+  "browser__vendor": {
+    "message": "przeglądarka: dostawca"
+  },
+  "browser__vendor__version__language__operating_system_vendor": {
+    "message": "przeglądarka: dostawca, wersja, język, dostawca systemu operacyjnego"
+  },
   "cancel": {
     "message": "Anuluj"
   },
@@ -134,6 +146,9 @@
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "Kliknij ikonę puzzla obok pola wyszukiwania i przypnij Ghostery do paska narzędzi."
+  },
+  "close": {
+    "message": "Zamknij"
   },
   "collapse": {
     "message": "Zwiń"
@@ -184,6 +199,9 @@
     "message": "Interakcja z klientem",
     "description": "Tracker category name"
   },
+  "data_collection_summary": {
+    "message": "Podsumowanie zbierania danych"
+  },
   "detailed_view": {
     "message": "Widok szczegółowy"
   },
@@ -204,9 +222,6 @@
   },
   "don_t_ask_again": {
     "message": "Nie pytaj ponownie"
-  },
-  "done": {
-    "message": "Gotowe"
   },
   "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
     "message": "Ze względu na ograniczenia przeglądarki i brak dodatkowych uprawnień, Ghostery nie jest w stanie Cię chronić."
@@ -236,6 +251,9 @@
   "enter_website_url": {
     "message": "Wprowadź adres URL strony internetowej"
   },
+  "error__type__message__stack_trace": {
+    "message": "błąd: typ, komunikat, ślad stosu"
+  },
   "errors__@_0__": {
     "message": "Błędy ($${0})"
   },
@@ -254,6 +272,12 @@
   },
   "experimental_filters": {
     "message": "Eksperymentalne filtry"
+  },
+  "extension__version__installation_date__random_install_number__from_1_to_100___basic_settings__contribution_status": {
+    "message": "rozszerzenie: wersja, data instalacji, losowy numer instalacji (od 1 do 100), podstawowe ustawienia, status kontrybucji"
+  },
+  "extension_id_is_removed_from_the_stack_traces_": {
+    "message": "Identyfikator rozszerzenia jest usuwany ze śladów stosu."
   },
   "extensions": {
     "message": "Rozszerzenia",
@@ -289,6 +313,9 @@
   "ghostery_is_paused_on_this_site_": {
     "message": "Ghostery jest wstrzymane dla tej witryny."
   },
+  "ghostery_never_collects_personal_information_like_passwords__browsing_history_or_the_content_of_the_pages_you_visit_": {
+    "message": "Ghostery nigdy nie zbiera informacji osobistych, takich jak hasła, historia przeglądania czy treść odwiedzanych stron."
+  },
   "ghostery_paused": {
     "message": "Ghostery wstrzymane"
   },
@@ -307,6 +334,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery będzie wyświetlać liczbę trackerów zablokowanych na danej stronie. Kliknięcie w ikonę Ghostery spowoduje wyśwetlenie bardziej szczegółowych informacji."
   },
+  "hashes_of_potentially_unique_identifier_in_requests_parameters": {
+    "message": "hasze potencjalnie unikalnych identyfikatorów w parametrach żądań"
+  },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Pomóż Ghostery w walce o sieć, w której prywatność jest podstawowym prawem człowieka."
   },
@@ -323,8 +353,8 @@
   "ignore": {
     "message": "Zignoruj"
   },
-  "information_about_web_trackers__add_on_health_and_performance_telemetry_will_be_shared_in_accordance_with_our__a_href__@_0___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
-    "message": "Informacje o trackerach oraz telemetrii dotyczącej stanu i wydajności dodatku będą udostępniane zgodnie z naszą <a href=\"$${0}\" target=\"_blank\" rel=\"noreferrer\">Polityką Prywatności</a>, zwiększającą ochronę prywatności społeczności Ghostery.",
+  "information_about__a_href__@_0___web_trackers__a____a_href____1___add_on_s_health__a___and__a_href____2___performance_telemetry__a__will_be_shared_in_accordance_with_our__a_href____3___target___blank__rel__noreferrer__privacy_policy__a___advancing_privacy_protection_for_the_ghostery_community_": {
+    "message": "Informacje o <a href=\"$${0}\">trackerach</a>, <a href=\"$${1}\">stanie rozszerzenia i <a href=\"$${2}\">telemetrii wydajności</a> będą udostępniane zgodnie z naszą <a href=\"$${3}\" target=\"_blank\" rel=\"noreferrer\">Polityką Prywatności</a>, co przyczynia się do zwiększenia ochrony prywatności społeczności Ghostery.",
     "description": "'add-on' means 'browser extension'"
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
@@ -333,8 +363,11 @@
   "join_ghostery": {
     "message": "Dołącz do Ghostery"
   },
+  "k_anonymity_protected_reports_of_page_shows": {
+    "message": "raporty chronione k-anonimowością dotyczące wyświetleń strony"
+  },
   "keep_disabled": {
-    "message": "Pozostaw nieaktywne"
+    "message": "Pozostaw wyłączone"
   },
   "last_update__@_0_": {
     "message": "Ostatnia aktualizacja: $${0}"
@@ -440,6 +473,9 @@
   "paused": {
     "message": "Wstrzymane"
   },
+  "performance_telemetry": {
+    "message": "Telemetria wydajności"
+  },
   "permission_required": {
     "message": "Wymagane uprawnienia"
   },
@@ -482,6 +518,9 @@
   "report_a_broken_page": {
     "message": "Zgłoś zepsutą stronę"
   },
+  "request_metadata_of_potential_web_trackers": {
+    "message": "żądanie metadanych potencjalnych trackerów internetowych"
+  },
   "save": {
     "message": "Zapisz"
   },
@@ -502,6 +541,9 @@
   },
   "send_feedback": {
     "message": "Wyślij opinię"
+  },
+  "sentry_sdk_is_in_use_to_gather_and_send_the_reports__but_sentry_does_only_receive_information_above___no_two_requests_can_be_linked_with_one_another_and_browser_ip_is_never_shared_with_sentry_": {
+    "message": "Sentry SDK jest używany do zbierania i wysyłania raportów, ale Sentry otrzymuje tylko powyższe informacje - żadne dwa żądania nie mogą być ze sobą powiązane, a adres IP przeglądarki nigdy nie jest udostępniany Sentry."
   },
   "settings_sync": {
     "message": "Synchronizacja ustawień"
@@ -535,6 +577,9 @@
   "software_licenses": {
     "message": "Licencje na oprogramowanie"
   },
+  "statistical_reports_on_navigational_routes": {
+    "message": "statystyczne raporty dotyczące tras nawigacyjnych"
+  },
   "submit_a_new_tracker": {
     "message": "Zgłoś nowego tropiciela"
   },
@@ -562,6 +607,15 @@
   },
   "to_adjust_privacy_protection_trust_a_site_": {
     "message": "Aby dostosować ochronę prywatności, zaufaj stronie:"
+  },
+  "to_get_insights_on_add_on_usage__the_following_information_about_the_browser_and_the_extension_is_collected_": {
+    "message": "Aby uzyskać informacje na temat użycia dodatku, zbierane są następujące dane dotyczące przeglądarki i rozszerzenia:"
+  },
+  "to_monitor_critical_crash_information_of_the_extension__the_following_information_about_errors_is_collected_": {
+    "message": "Aby monitorować krytyczne informacje o awariach rozszerzenia, zbierane są następujące informacje o błędach:"
+  },
+  "to_provide_privacy_protection_features__the_following_information_about_web_trackers_is_collected_": {
+    "message": "Aby zapewnić funkcje ochrony prywatności, zbierane są następujące informacje o trackerach:"
   },
   "tracker_database": {
     "message": "Baza danych Trackerów"
@@ -638,6 +692,9 @@
   "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
     "message": "Wiemy, że polegasz na Ghostery, aby płynnie korzystać z YouTube. Dopóki nie pojawi się bardziej wyrafinowane rozwiązanie, oto tymczasowa poprawka."
   },
+  "web_trackers": {
+    "message": "Trackery"
+  },
   "website": {
     "message": "Strona internetowa"
   },
@@ -662,8 +719,8 @@
   "whotracks_me_wheel": {
     "message": "Wykres kołowy WhoTracks.Me"
   },
-  "without_privacy_features_enabled__only_basic_functionality_of_naming_trackers_is_available_": {
-    "message": "Bez włączonych funkcji prywatności dostępne są tylko podstawowe funkcje nazywania trackerów."
+  "with_ghostery_disabled__only_the_basic_functionality_of_naming_trackers_is_available_": {
+    "message": "Gdy Ghostery jest wyłączone, dostępna jest tylko podstawowa funkcjonalność śledzenia trackerów."
   },
   "you_are_awesome_": {
     "message": "Jesteś super!"
